2006-03-10  Aaron Bockover  <aaron@abock.org>

	* banshee.mdb: Updated MonoDevelop project

	* src/Banshee.Base/PlayerEngineCore.cs: first pass at dynamic 
	engine switching

	* src/Banshee.Base/Dap/Dap.cs: Added CanSynchronize 

	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: Added SetProperty method

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Renamed IsSynchronizable
	to CanSynchronize; commented out some 'broke the build' stuff until
	gabaug can discuss

	* src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs: Added 
	SetProperty method to set GObject properties on the underlying playbin

	* src/Banshee.MediaEngine/Helix/HelixPlayer.cs: Port of Helix backend
	from IPlayerEngine to PlayerEngine

2006-03-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Implemented adding and
	deleting tracks, bytes used.  Use new HAL keys for where to find/write
	music, if they exist.

	* src/Banshee.Dap/MassStorage/MassStorageTrackInfo.cs: New file, simple
	subclass of FileTrackInfo.

	* src/Banshee.Dap/MassStorage/Makefile.am: add MassStorageTrackInfo.cs.

2006-03-09  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/PlayerEngine.cs: Replacement for IPlayerEngine; base
	class that offers common functionality between all engines; new 
	event/message system that is more verbose than old system... allows for
	metadata extraction from streams and buffering

	* src/Banshee.Base/PlayerEngineCore.cs: Proxy and wrapper for PlayerEngine
	that handles all loading of PlayerEngine types and switching out of 
	engines at runtime

	* src/Banshee.Base/PlayerEngineLoader.cs: Removed, deprecated, etc...
	PlayerEngineCore now loads and instantiates engines from assemblies

	* src/PlayerInterface.cs: User interface is completely passive regarding
	interaction with PlayerEngineCore; UI updates only after getting events
	and messages from PlayerEngineCore; plugins now have the exact same